# erofs-utils

./: .gitignore  Android.bp  CMakeLists.txt  METADATA  Makefile.am  OWNERS  configure.ac  mkerofsimage.sh
dump/: main.c
fsck/: main.c
fuse/: Makefile.am  main.c
include/: erofs_fs.h
include/erofs/: cache.h  config.h  hashtable.h  internal.h
lib/: Makefile.am  compress.c  compressor.c  compressor.h  compressor_liblzma.c  compressor_lz4.c  compressor_lz4hc.c  config.c  data.c  decompress.c  dir.c  inode.c  namei.c  xattr.c
mkfs/: Makefile.am  main.c
scripts/: fix_gettid_define
src/: liberofs.cmake  liblog.cmake  libselinux.cmake
tests/: Makefile.am
tests/common/: rc
tests/erofs/: 001  002  003  004  005  006  007  008  009  010  011  012  013  014  015  016
tests/src/: badlz4.c
